--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>🚧 app</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Uncomment this if you use the TailwindCSS integration -->
-    <!-- <link rel="stylesheet" href="/priv/static/app.css"> -->
-    <script type="module" src="/priv/static/app.mjs"></script>
-  </head>
+  <title>🚧 app</title>
 
-  <body>
-    <div id="app"></div>
-  </body>
+  <!-- Uncomment this if you use the TailwindCSS integration -->
+  <link rel="stylesheet" href="/priv/static/app.css">
+  <script type="module" src="/priv/static/app.mjs"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
