added github pages action

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <script type="module" src="/priv/static/app.mjs"></script>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TDG4SZSM2L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TDG4SZSM2L');
+</script>
+
 <body>
   <div id="app"></div>
 </body>
