--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>🚧 app</title>
 
   <!-- Uncomment this if you use the TailwindCSS integration -->
-  <link rel="stylesheet" href="/conjugator/priv/static/app.css">
-  <script type="module" src="/conjugator/priv/static/app.mjs"></script>
+  <link rel="stylesheet" href="/priv/static/app.css">
+  <script type="module" src="/priv/static/app.mjs"></script>
 </head>
 
 
